bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/01-certmanager-without-manage-tls.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: manage-tls-rc
spec:
  applicationImage: k8s.gcr.io/pause:2.0
  replicas: 1
  expose: true
  manageTLS: false # Deletes the *-svc-tls-cm CertManager Certificate
  service:
    port: 9443
  route:
    host: runtimecomponentoperator.test
    termination: reencrypt
