bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/02-certmanager-with-manage-tls.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: manage-tls-rc
spec:
  applicationImage: k8s.gcr.io/pause:2.0
  replicas: 1
  expose: true
  manageTLS: true # Restore default
  service:
    port: 9443
  route:
    host: runtimecomponentoperator.test
    termination: reencrypt
