bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/03-certmanager-statefulset-with-manage-tls.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: manage-tls-rc
spec:
  applicationImage: k8s.gcr.io/pause:2.0
  replicas: 1
  expose: true
  service:
    port: 9443
  statefulSet:
    storage:
      size: "10Mi"
      mountPath: "/mnt/data"
  route:
    host: runtimecomponentoperator.test
    termination: reencrypt
