bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/README.txt
In order to run this test, the cluster must
have a storage class enabled

In order to run this test, the user must
ensure the two self-signed certificates (`byo-svc-secret` and `byo-route-secret`) have not yet expired (June 22, 2032)
