bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/01-assert.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: manage-tls-rc
spec:
  template:
    spec:
      containers:
        - ports:
            - name: 9443-tcp
              containerPort: 9443
              protocol: TCP
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: manage-tls-rc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: manage-tls-rc
spec:
  rules:
    - host: runtimecomponentoperator.test
