bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/01-errors.yaml
# Verify that CertManager Certificate *-svc-tls-cm is deleted
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: manage-tls-wsliberty-svc-tls-cm
