bundle/tests/scorecard/minikube-kuttl/ingress-manage-tls/04-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: v1
kind: Secret
metadata:
  name: byo-svc-secret
data:
  ca.crt: >-
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJjVENDQVJlZ0F3SUJBZ0lSQUxHaWxjbTVwZGlKZG9VVWNQVjZtSlF3Q2dZSUtvWkl6ajBFQXdJd0dERVcKTUJRR0ExVUVBeE1OYldGdVlXZGxMWFJzY3kxeVl6QWVGdzB5TWpBMk1qY3lNRFU0TlRKYUZ3MHlNakE1TWpVeQpNRFU0TlRKYU1CZ3hGakFVQmdOVkJBTVREVzFoYm1GblpTMTBiSE10Y21Nd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxCmhrak9QUU1CQndOQ0FBU3BvZDJrc3B4eUNNZ3BST2ZRdFl5UkpxRG04YjArZWNkNXM3VUJJZ090bU52UExBankKUUl0MGlTczRHSTlkVGJSVHR4bnhLVUxCNjJDSlJZZFBGUjA2bzBJd1FEQU9CZ05WSFE4QkFmOEVCQU1DQXFRdwpEd1lEVlIwVEFRSC9CQVV3QXdF [...]
  tls.crt: >-
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJjVENDQVJlZ0F3SUJBZ0lSQUxHaWxjbTVwZGlKZG9VVWNQVjZtSlF3Q2dZSUtvWkl6ajBFQXdJd0dERVcKTUJRR0ExVUVBeE1OYldGdVlXZGxMWFJzY3kxeVl6QWVGdzB5TWpBMk1qY3lNRFU0TlRKYUZ3MHlNakE1TWpVeQpNRFU0TlRKYU1CZ3hGakFVQmdOVkJBTVREVzFoYm1GblpTMTBiSE10Y21Nd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxCmhrak9QUU1CQndOQ0FBU3BvZDJrc3B4eUNNZ3BST2ZRdFl5UkpxRG04YjArZWNkNXM3VUJJZ090bU52UExBankKUUl0MGlTczRHSTlkVGJSVHR4bnhLVUxCNjJDSlJZZFBGUjA2bzBJd1FEQU9CZ05WSFE4QkFmOEVCQU1DQXFRdwpEd1lEVlIwVEFRSC9CQVV3QXdF [...]
  tls.key: >-
    LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUdyb05GYVFmWk1SV2Q5d0MzVlJBd2k1Qmk1bWJQSzFHNGlCTXZISWhFN2xvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFcWFIZHBMS2NjZ2pJS1VUbjBMV01rU2FnNXZHOVBubkhlYk8xQVNJRHJaamJ6eXdJOGtDTApkSWtyT0JpUFhVMjBVN2NaOFNsQ3dldGdpVVdIVHhVZE9nPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
type: kubernetes.io/tls
---
apiVersion: v1
kind: Secret
metadata:
  name: byo-route-secret
data:
  ca.crt: >-
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJrVENDQVRlZ0F3SUJBZ0lSQVBHVW5FZDBCK0VFYmVpTTF5Sktsdjh3Q2dZSUtvWkl6ajBFQXdJd0tERW0KTUNRR0ExVUVBeE1kY25WdWRHbHRaV052YlhCdmJtVnVkRzl3WlhKaGRHOXlMblJsYzNRd0hoY05Nakl3TmpJMApNVFF6T0RFMVdoY05Nekl3TmpJME1UUXpPREUxV2pBb01TWXdKQVlEVlFRREV4MXlkVzUwYVcxbFkyOXRjRzl1ClpXNTBiM0JsY21GMGIzSXVkR1Z6ZERCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQklCcmRNMW0KdzVIdEZzOE1WYmJhM1pQWVp6YzMvQzBEcXJGdloralc5QjM2ZEN0TW1iLzVINFo5ZjlhRzRBcTBNZklMT1BSdQpqUk9vMlZmTGN4ZTZKbytqUWpC [...]
  destCA.crt: >-
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJjVENDQVJlZ0F3SUJBZ0lSQUxHaWxjbTVwZGlKZG9VVWNQVjZtSlF3Q2dZSUtvWkl6ajBFQXdJd0dERVcKTUJRR0ExVUVBeE1OYldGdVlXZGxMWFJzY3kxeVl6QWVGdzB5TWpBMk1qY3lNRFU0TlRKYUZ3MHlNakE1TWpVeQpNRFU0TlRKYU1CZ3hGakFVQmdOVkJBTVREVzFoYm1GblpTMTBiSE10Y21Nd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxCmhrak9QUU1CQndOQ0FBU3BvZDJrc3B4eUNNZ3BST2ZRdFl5UkpxRG04YjArZWNkNXM3VUJJZ090bU52UExBankKUUl0MGlTczRHSTlkVGJSVHR4bnhLVUxCNjJDSlJZZFBGUjA2bzBJd1FEQU9CZ05WSFE4QkFmOEVCQU1DQXFRdwpEd1lEVlIwVEFRSC9CQVV3QXdF [...]
  tls.crt: >-
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJrVENDQVRlZ0F3SUJBZ0lSQVBHVW5FZDBCK0VFYmVpTTF5Sktsdjh3Q2dZSUtvWkl6ajBFQXdJd0tERW0KTUNRR0ExVUVBeE1kY25WdWRHbHRaV052YlhCdmJtVnVkRzl3WlhKaGRHOXlMblJsYzNRd0hoY05Nakl3TmpJMApNVFF6T0RFMVdoY05Nekl3TmpJME1UUXpPREUxV2pBb01TWXdKQVlEVlFRREV4MXlkVzUwYVcxbFkyOXRjRzl1ClpXNTBiM0JsY21GMGIzSXVkR1Z6ZERCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQklCcmRNMW0KdzVIdEZzOE1WYmJhM1pQWVp6YzMvQzBEcXJGdloralc5QjM2ZEN0TW1iLzVINFo5ZjlhRzRBcTBNZklMT1BSdQpqUk9vMlZmTGN4ZTZKbytqUWpC [...]
  tls.key: >-
    LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUVuSmFPa1F0cFVSd3o4ZWVBQnNRbTZjdDI3bWd5R01zM3BmcDh2a21EOFBvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFZ0d0MHpXYkRrZTBXend4VnR0cmRrOWhuTnpmOExRT3FzVzluNk5iMEhmcDBLMHladi9rZgpobjEvMW9iZ0NyUXg4Z3M0OUc2TkU2alpWOHR6RjdvbWp3PT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
type: kubernetes.io/tls
